--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,7 +3,7 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 html {
-    font-size: 62.5%;
+    // font-size: 62.5%;
     font-family: 'Inter', sans-serif;
 }
 * {
