--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -1,8 +1,7 @@
 .header-wrapper {
     box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.1) !important;
-    font-family: 'Inter';
+    font-family: "Inter";
     div:first-child {
-        // height: $header;
         height: 30px;
     }
     nav {
@@ -18,7 +17,7 @@
                     @apply flex items-center;
                     .ant-tabs-tab-btn {
                         // color: $blue-3;
-                        color: blue
+                        color: blue;
                     }
                 }
             }
@@ -37,15 +36,34 @@
             border-radius: 10px;
         }
     }
-    
 }
-.ant-layout-header{
+.ant-layout-header {
     padding: 0px 10px !important;
-    
 }
-.header{
+.header {
     height: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
+}
+.user-panel {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    padding: 15px;
+    font-size: 12px;
+    line-height: normal;
+    color: white;
+}
+
+.user-panel-logo {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    background-color: #377fa9;
+    color: white;
+    height: 50px;
 }
